# phd-experiment-evaluation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cooling/experiment/: __init__.py
cooling/experiment/evaluation/: accommodation.py  baserow.py  calibration.py  conduction.py  fitting.py  influx.py  lowcalibration.py  pfeiffer_uncertainties.csv  pressure.py
cooling/experiment/evaluation/lakeshore/: X165406.csv  X166120.csv  X166410.csv  X166521.csv  corrector.py  temp_sensor.py
cooling/experiment/notebooks/: data-plotter.ipynb  heating-calibration.ipynb  high-pressure-calibration.ipynb  manual_ac_final.ipynb  odr-example.ipynb  pd-calibration-debug.ipynb  pressure-correction.ipynb  pressure-prediction.ipynb  pressure-spectrum.ipynb  radiative-cooling.ipynb  teflon-thermals.ipynb  time-vs-temp.ipynb  tm-cooling.ipynb
cooling/experiment/notebooks/testmass-reflectivity/: absorption.csv  plot.ipynb  reflectivity.csv  reflectivity.pgf
cooling/experiment/notebooks/wire-thermal-anchor/: data-10K.csv  data-20K.csv  data-4K.csv  data-6K.csv  phosphor-wire.ipynb
cooling/theory/: __init__.py  analytical.py  distributions.py  gas.py  helium.py  objects.py
cooling/theory/data/materials/: __init__.py  copper.py  models.py  polyamide.py  polyimide.py  silicon.py  teflon.py
cooling/theory/notebooks/gas-regimes/: knudsen.py
cooling/theory/notebooks/gases/: _fit_thermal_cond-helium.ipynb  gas-distributions-plot.ipynb
helpers/: __init__.py  figures.py
tests/: figure-test.py  figure_test.py  uncertainty_test.py
(+6 files in other folders)
